MiniHttpServer change to using virtual thread